--- a/css/galeia.css
+++ b/css/galeia.css
@@ -478,7 +478,7 @@ nav ul li a:active {
 }
 
 .btn:active {
-    transform: translateY(0); /* Regresar a la posición original al hacer clic */
+    transform: translateY(0); 
 }
 
 
@@ -818,7 +818,6 @@ nav ul li a:active {
     }
 }
 
-/* Pantallas grandes (escritorio, min-width: 1024px) */
 @media (min-width: 1024px) {
     header {
         padding: 20px 80px;
@@ -857,5 +856,70 @@ nav ul li a:active {
         justify-content: space-between;
         align-items: flex-start;
         gap: 50px;
+    }
+}
+
+@media (max-width: 767px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .social-icons {
+        margin-top: 10px;
+    }
+
+    .about-us-content, .routes-list, .offer-container, .fleet-container, .servicio-cards {
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .about-us-content .text-content, .about-us-content .image-content,
+    .routes-list .route-card, .service-item, .offer-item, .fleet-item, .servicio-card {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .about-image, .route-image, .offer-image, .fleet-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .routes-section h2, .services h2, .faq-section h2, .offer-section h2, .fleet-section h2 {
+        text-align: center;
+        font-size: 1.5em;
+    }
+
+    .service-item {
+        text-align: center;
+    }
+
+    
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .footer-container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer-section ul {
+        padding: 0;
+    }
+
+    .fleet-item .text-overlay {
+        padding: 10px;
     }
 }
